--- a/demo-2/src/main/resources/templates/demo/BootStrapTable.html
+++ b/demo-2/src/main/resources/templates/demo/BootStrapTable.html
@@ -19,7 +19,6 @@
     <title>bootstrap table</title>
   </head>
   <body>
-    <h1 class="text-info">table组件</h1>
     <div class="container">
          <div class="panel-body" style="padding-bottom:0px;">
         <div class="panel panel-default">
@@ -35,7 +34,7 @@
                             <input type="text" class="form-control" id="password"/>
                         </div>
                         <div class="col-sm-4" >
-                            <button type="button" style="margin-left:0px;margin-top:10px;" id="btn_query" class="btn btn-primary">查询</button>
+                            <button type="button"  id="btn_query" class="btn btn-primary">查询</button>
                         </div>
                     </div>
                 </form>
@@ -52,6 +51,7 @@
     $().ready(function(){
     	var userName ="陈美凯"
     	InitMainTable ();
+    	
     })
     
      var $table;
@@ -60,39 +60,27 @@
        //记录页面bootstrap-table全局变量$table，方便应用
        var queryUrl = "http://localhost:7070/getShow"
        $table = $('#showTable').bootstrapTable({
-           url: queryUrl,                      //请求后台的URL（*）
-           method: 'GET',                      //请求方式（*）
-           //toolbar: '#toolbar',              //工具按钮用哪个容器
+    	   locale:'zh-CN',                     //中文支持
+    	   url: queryUrl,                      //请求后台的URL（*）
+           method: 'get',                      //请求方式（*）
+           contentType: "application/x-www-form-urlencoded",
+           toolbar: '#toolbar',                //工具按钮用哪个容器
            striped: true,                      //是否显示行间隔色
            cache: false,                       //是否使用缓存，默认为true，所以一般情况下需要设置一下这个属性（*）
            pagination: true,                   //是否显示分页（*）
-           sortable: true,                     //是否启用排序
+           sortable: false,                     //是否启用排序
            sortOrder: "asc",                   //排序方式
            sidePagination: "server",           //分页方式：client客户端分页，server服务端分页（*）
-           pageNumber: 1,                      //初始化加载第一页，默认第一页,并记录
+           pageNumber:1,                       //初始化加载第一页，默认第一页
            pageSize: 10,                       //每页的记录行数（*）
            pageList: [10, 25, 50, 100],        //可供选择的每页的行数（*）
-           search: false,                      //是否显示表格搜索
-           strictSearch: true,
-           showColumns: true,                  //是否显示所有的列（选择显示的列）
-           showRefresh: true,                  //是否显示刷新按钮
+           search: false,                       //是否显示表格搜索，此搜索是客户端搜索，不会进服务端，所以，个人感觉意义不大
+           showColumns: false,                  //是否显示所有的列
            minimumCountColumns: 2,             //最少允许的列数
            clickToSelect: true,                //是否启用点击选中行
-           //height: 500,                      //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
-           uniqueId: "ID",                     //每一行的唯一标识，一般为主键列
-           showToggle: true,                   //是否显示详细视图和列表视图的切换按钮
-           cardView: false,                    //是否显示详细视图
-           detailView: false,                  //是否显示父子表
-           //得到查询的参数
-           queryParams : function (params) {
-               //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
-               var temp = {   
-            	   pageSize: params.limit,                         //页面大小
-                   pageNumber: (params.offset / params.limit) + 1,   //页码
-                   userName:userName      //排序列名  
-               };
-               return temp;
-           },
+           /* height: 500, */                        //行高，如果没有设置height属性，表格自动根据记录条数觉得表格高度
+           uniqueId: "id",                     //每一行的唯一标识，一般为主键列
+           detailView: false,                   //是否显示父子表
            columns: [{
                checkbox: true,  
                visible: true                  //是否显示复选框  
@@ -107,21 +95,46 @@
            }, {
                field:'id',
                title: '操作',
-               width: 120,
+               width: 300,
                align: 'center',
-               valign: 'middle'
+               formatter:function(value,row,index){
+                   //通过formatter可以自定义列显示的内容
+                   //value：当前field的值，即id
+                   //row：当前行的数据
+                   var a = '<a href="javascript:viewEntity();" class="btn btn-info btn-xs"><i class="glyphicon glyphicon-book"></i>&nbsp;<span>查看</span></a>'
+        			   +'<a href="javascript:editEntity();" class="btn btn-warning btn-xs"><i class="glyphicon glyphicon-pencil"></i>&nbsp;<span>编辑</span></a>'
+        			   +'<a href="javascript:deleteByID(['+value+']);" class="btn btn-danger btn-xs"><i class="glyphicon glyphicon-trash"></i>&nbsp;<span>删除</span></a>'		   
+                   return a;
+               } 
            }, ],
+           //得到查询的参数
+           queryParams : queryParams,
            onLoadSuccess: function () {
            },
            onLoadError: function () {
                showTips("数据加载失败！");
            },
            onDblClickRow: function (row, $element) {
-               var id = row.ID;
-               EditViewById(id, 'view');
            },
        });
+       
+       //请求服务数据时所传参数
+       function queryParams(params){
+    	 //这里的键的名字和控制器的变量名必须一直，这边改动，控制器也需要改成一样的
+           var temp = {   
+        	   pageSize: params.limit,                         //页面大小
+               pageNumber: (params.offset / params.limit) + 1,   //页码
+               userName:userName      //排序列名  
+           };
+           return temp;
+       }
    };
+   
+   function deleteByID(id){
+	   //删除行，field:传入的字段，values:数组(存放要删除的字段值)
+	   $('#showTable').bootstrapTable('remove', {field: 'id', values: id});
+   }
+   
     	
   </script>
 </html>
