--- a/demo-2/src/main/resources/templates/demo/BootStrapTable.html
+++ b/demo-2/src/main/resources/templates/demo/BootStrapTable.html
@@ -13,7 +13,7 @@
     <script th:src="@{/js/jquery-3.1.1.min.js}"></script>
     <script th:src="@{/js/popper.js}"></script>
     <script th:src="@{/js/bootstrap.js}"></script>
-    <script th:src="@{/js/BootsSrapTable/bootstrap-table.min.js}"></script>
+    <script th:src="@{/js/BootsSrapTable/bootstrap-datetimepicker.js}"></script>
     <script th:src="@{/js/BootsSrapTable/bootstrap-table-zh-CN.js}"></script>
 
     <title>bootstrap table</title>
